Replace Base64 encoding mechanism - JFreeSVG now requires Java 8 or later